<resources>
    <string name="app_name">BeersOfTheWorld</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_in">Log In</string>
    <string name="user">User</string>
    <string name="password">Password</string>
    <string name="message_recover_pass">Don\'t remember your password?</string>
    <string name="get_it_back">Get it back</string>
    <string name="start">Log In</string>
    <string name="message_need_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="retrofit_timeout">At the moment the service is not available. Please retry the request</string>
    <string name="retrofit_failure">The timeout has been exceeded, please retry the request</string>
    <string name="register">Register</string>
    <string name="my_information">My information</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password_title">Password</string>
    <string name="cancel">Cancel</string>
    <string name="accept">Accept</string>
    <string name="confirm_password">Confirm password</string>
    <string name="empty_field">The field cannot be sent empty.</string>
    <string name="password_not_same">Password confirmation is not the same</string>
    <string name="common_error">An error occurred, please try again later</string>
    <string name="user_created">User created successfully</string>
    <string name="recover_your_password">Recover your password</string>
    <string name="enter_registered_email">Enter registered email</string>
    <string name="message_to_recover_pass">A link will be sent to your email to recover your password</string>
    <string name="send">Send</string>
    <string name="request_confirmed">Request confirmed</string>
    <string name="invalid_email">Email is invalid</string>
    <string name="invalid_user">Username does not exist</string>
    <string name="wait_a_moment">Wait a moment...</string>
    <string name="success">Success!</string>
    <string name="welcome">Welcome %s!</string>
    <string name="search">Search</string>
    <string name="no_available">No available</string>
</resources>