<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true">

    <ImageView
        android:id="@+id/imageConsummer"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_beer"
        android:layout_marginBottom="@dimen/dimen30"
        android:layout_above="@+id/titleLogin"
        android:layout_width="@dimen/dimen100"
        android:layout_height="@dimen/dimen100" />

    <TextView
        android:id="@+id/titleLogin"
        android:text="@string/log_in"
        android:textStyle="bold"
        android:layout_above="@+id/etUser"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/big_size"
        android:layout_marginBottom="@dimen/dimen_16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etUser"
        android:layout_marginStart="@dimen/dimen30"
        android:layout_marginEnd="@dimen/dimen30"
        app:boxCornerRadiusBottomStart="@dimen/dimen_16"
        app:boxCornerRadiusBottomEnd="@dimen/dimen_16"
        app:boxCornerRadiusTopStart="@dimen/dimen_16"
        app:boxCornerRadiusTopEnd="@dimen/dimen_16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/etPassword"
        style="@style/TextInputLayoutOutline"
        android:layout_centerInParent="true"
        android:layout_marginBottom="@dimen/dimen_16">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen60"
            android:textSize="@dimen/mediumSize"
            android:hint="@string/user" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="@dimen/dimen30"
        android:layout_marginEnd="@dimen/dimen30"
        app:boxCornerRadiusBottomEnd="@dimen/dimen_16"
        app:boxCornerRadiusBottomStart="@dimen/dimen_16"
        app:boxCornerRadiusTopEnd="@dimen/dimen_16"
        app:boxCornerRadiusTopStart="@dimen/dimen_16"
        style="@style/TextInputLayoutOutline"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen60"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="@dimen/mediumSize" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/btn_recover_pass"
        android:padding="@dimen/dimen8"
        android:layout_marginStart="@dimen/dimen_16"
        android:layout_marginEnd="@dimen/dimen_16"
        android:layout_below="@+id/etPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dimen_16"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:textColor="@color/purple_light"
            android:text="@string/message_recover_pass"
            android:textSize="@dimen/mediumSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/get_it_back"
            android:textColor="@color/purple"
            android:layout_marginStart="@dimen/dimen_8"
            android:textStyle="bold"
            android:textSize="@dimen/mediumSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        android:layout_marginStart="@dimen/dimen30"
        android:layout_marginEnd="@dimen/dimen30"
        android:textSize="@dimen/big_size"
        android:layout_below="@+id/btn_recover_pass"
        android:layout_centerHorizontal="true"
        android:text="@string/start"
        android:textStyle="bold"
        app:cornerRadius="@dimen/dimen_16"
        android:textAllCaps="false"
        android:layout_marginTop="@dimen/dimen30"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen60" />

    <LinearLayout
        android:id="@+id/btn_go_signup"
        android:layout_marginStart="@dimen/dimen30"
        android:layout_marginEnd="@dimen/dimen30"
        android:layout_below="@+id/btnLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dimen_16"
        android:orientation="horizontal"
        android:padding="@dimen/dimen_8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/message_need_account"
            android:textSize="@dimen/mediumSize"
            android:textColor="@color/purple"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/sign_up"
            android:layout_marginStart="@dimen/dimen_8"
            android:textStyle="bold"
            android:textColor="@color/purple"
            android:textSize="@dimen/mediumSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>


    <RelativeLayout
        android:layout_alignParentBottom="true"
        android:background="@color/orange"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen30" />
</RelativeLayout>