<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

            <ImageView
                android:id="@+id/btnBack"
                android:src="@drawable/ic_arrow_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/register"
                android:textColor="@color/white"
                android:textSize="@dimen/bigSize"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_below="@+id/appBar"
        android:layout_above="@+id/viewShadow"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:padding="@dimen/dimen16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:padding="@dimen/dimen30"
                android:orientation="vertical"
                android:background="@drawable/background_corner"
                android:layout_marginBottom="@dimen/dimen30"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:layout_marginBottom="@dimen/dimen16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="@string/my_information"
                        android:textStyle="bold"
                        android:textSize="@dimen/xbBigSize"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/etUsername"
                    style="@style/TextInputLayoutOutline"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxBackgroundColor="@color/white"
                    app:boxCornerRadiusBottomEnd="16dp"
                    app:boxCornerRadiusBottomStart="16dp"
                    app:boxCornerRadiusTopEnd="16dp"
                    app:boxCornerRadiusTopStart="16dp"
                    android:layout_marginBottom="@dimen/dimen16">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:hint="@string/username"
                        android:textSize="13sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/etEmail"
                    style="@style/TextInputLayoutOutline"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxBackgroundColor="@color/white"
                    app:boxCornerRadiusBottomEnd="16dp"
                    app:boxCornerRadiusBottomStart="16dp"
                    app:boxCornerRadiusTopEnd="16dp"
                    app:boxCornerRadiusTopStart="16dp"
                    android:layout_marginBottom="@dimen/dimen16">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:hint="@string/email"
                        android:textSize="13sp" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:padding="@dimen/dimen30"
                android:orientation="vertical"
                android:background="@drawable/background_corner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/password_title"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:layout_marginBottom="@dimen/dimen16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/etPass"
                    style="@style/TextInputLayoutOutline"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxBackgroundColor="@color/white"
                    app:boxCornerRadiusBottomEnd="16dp"
                    app:boxCornerRadiusBottomStart="16dp"
                    app:boxCornerRadiusTopEnd="16dp"
                    app:boxCornerRadiusTopStart="16dp"
                    android:layout_marginBottom="@dimen/dimen16"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:textSize="13sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/etConfirmPass"
                    app:boxBackgroundColor="@color/white"
                    style="@style/TextInputLayoutOutline"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxCornerRadiusBottomEnd="16dp"
                    app:boxCornerRadiusBottomStart="16dp"
                    app:boxCornerRadiusTopEnd="16dp"
                    app:boxCornerRadiusTopStart="16dp"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:hint="@string/confirm_password"
                        android:inputType="textPassword"
                        android:textSize="13sp" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <View
        android:id="@+id/viewShadow"
        android:layout_above="@+id/contentButtons"
        android:background="@drawable/shadow_layout"
        android:layout_width="match_parent"
        android:layout_height="5dp" />

    <LinearLayout
        android:id="@+id/contentButtons"
        android:layout_alignParentBottom="true"
        android:padding="@dimen/dimen16"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCancel"
            android:layout_marginEnd="@dimen/dimen16"
            app:cornerRadius="22dp"
            android:text="@string/cancel"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:layout_width="140dp"
            android:layout_height="60dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnAccept"
            android:layout_marginStart="@dimen/dimen16"
            app:cornerRadius="22dp"
            android:text="@string/accept"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:layout_width="140dp"
            android:layout_height="60dp" />

    </LinearLayout>

</RelativeLayout>